--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,26 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<link rel="stylesheet" href="./style.css" />
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+		<script src="https://cdn.tailwindcss.com"></script>
+		<script>
+			tailwind.config = {
+			  theme: {
+				extend: {
+				  colors: {
+					clifford: '#da373d',
+				  }
+				}
+			  }
+			}
+		  </script>
+		<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
 		<title>Survey Cryptocurrency Price</title>
 		
 	</head>
-	<body>
-		<div id="root"></div>
+	<body class="bg-indigo-300">
+		<div id="root">
+			<p class="tracking-normal text-indigo-900 italic underline decoration-black-500 text-center mt-8 text-2xl underline-offset-4">Cryptocurrency Market Survey</p>
+		</div>
 		<script src="/socket.io/socket.io.js"></script>
         <script src="./main.js"></script>
 	</body>
